syntax="proto3";

option java_multiple_files = true;
option java_package = "io.grpc.services.auth";
option java_outer_classname = "AuthProto";

package auth;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string student_id = 3;
}

message Token {
    string access_token = 1;
}

service Auth {
    rpc Login(LoginRequest) returns (Token);
    rpc Register(RegisterRequest) returns (Token);
}